--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+:root {
+    --black: "#161617";
+    --white: "#FBFBFD";
+    --grey: "#E0E0E0";
+    --primary: "#FF4747";
+    --secondary: "#4a0000";
+    --accent: "#9D85FF";
+    --success: "#0FBD83";
+    --warining: "#FBB828";
+    --danger: "#D22C2C";
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
