--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,4 +1,10 @@
 @media (max-width: 480px) {
+    .footer_wrapper {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+
     .footer {
         display: flex;
         position: relative;
