--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -1,4 +1,5 @@
-.home {
+@media (max-width: 480px) {
+  .home {
     display: flex;
     flex-direction: column;
     padding: 100px 20px;
@@ -6,26 +7,25 @@
 
     font-family: var(--font-family);
     color: var(--dark-grey);
-}
+  }
 
-.home_header {
+  .home_header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 80px;
-}
+  }
 
-.home_info {
+  .home_info {
     width: 70%;
-}
+  }
 
-.home_title {
+  .home_title {
     color: var(--black);
-}
+  }
 
-
-.home_completado {
+  .home_completado {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,38 +33,48 @@
 
     font-size: 2rem;
     color: var(--success);
-}
-.home_status_bar {
-    content: '';
-    padding: 10px;
+  }
+
+  .home_status_bar {
     display: flex;
     align-items: center;
-    height: 30px;
-    border-radius: 20px;
     margin-top: 10px;
+    padding: 10px;
     width: 100%;
-    background-color: var(--success);
-    color: var(--white);
+    height: 30px;
+
     font-weight: 600;
-}
-.home_body {
+    color: var(--white);
+
+    background-color: var(--success);
+    border-radius: 20px;
+
+    content: '';
+  }
+
+  .home_body {
     display: flex;
     flex-direction: column;
-
     width: 100%;
-}
-.home_filters {
+  }
+
+  .home_filters {
     display: flex;
     justify-content: space-around;
     margin-top: 20px;
-}
-.home_filters small {
-    background-color: var(--grey);
+  }
+
+  .home_filters small {
     padding: 5px 10px;
-    border-radius: 40%;
+
     font-size: 0.5rem;
-}
-.home_content {
+
+    background-color: var(--grey);
+    border-radius: 40%;
+  }
+
+  .home_content {
     display: flex;
     flex-direction: column;
+  }
 }
