--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     --secondary: #4a0000;
     --accent: #9D85FF;
     --success: #0FBD83;
-    --warining: #FBB828;
+    --warning: #FBB828;
     --danger: #D22C2C;
 
     --font-family: 'Roboto', sans-serif;
