[Fix] status text and percentage number position, [Add] brand text functionality

--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -27,7 +27,7 @@
 
   .home_completado {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     width: 30%;
 
