--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
     --primary: #FF4747;
     --secondary: #4a0000;
     --accent: #9D85FF;
-    --success: #0FBD83;
+    --success: #0fbda4;
     --warning: #FBB828;
     --danger: #D22C2C;
 
