--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -13,7 +13,7 @@
     height: 80px;
     padding: 20px;
 
-    background: linear-gradient(225deg, var(--white), var(--grey));
+    background: var(--white);
     box-shadow: var(--grey) 0px 4px 16px, var(--white) 0px 8px 32px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -23,14 +23,14 @@
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
-
-    box-shadow: var(--grey) 0px 4px 16px, var(--white) 0px 8px 32px;
   }
 
   .header_content {
     display: flex;
     flex-direction: column;
     align-items: end;
+
+    color: var(--primary);
   }
 
   .header_title {
