--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -2,8 +2,10 @@
   .home {
     display: flex;
     flex-direction: column;
-    padding: 100px 20px;
+    padding: 80px 20px;
     width: 100%;
+
+    background-color: var(--white);
 
     font-family: var(--font-family);
     color: var(--dark-grey);
@@ -15,6 +17,8 @@
     align-items: center;
     width: 100%;
     height: 80px;
+
+    color: var(--dark-grey);
   }
 
   .home_info {
@@ -22,7 +26,7 @@
   }
 
   .home_title {
-    color: var(--black);
+    color: var(--dark-grey);
   }
 
   .home_completado {
@@ -37,18 +41,23 @@
   .home_status_bar {
     display: flex;
     align-items: center;
-    margin-top: 10px;
-    padding: 10px;
+    padding: 18px 5px;
     width: 100%;
     height: 30px;
 
     font-weight: 600;
+    font-size: 12px;
     color: var(--white);
 
     background-color: var(--grey);
     border-radius: 20px;
 
     content: '';
+  }
+
+  .home_status_bar span {
+    border-radius: 20px;
+    padding: 5px;
   }
 
   .home_body {
@@ -60,7 +69,7 @@
   .home_filters {
     display: flex;
     justify-content: space-around;
-    margin-top: 20px;
+    margin-top: 30px;
   }
 
   .home_filters small {
