--- a/src/components/shared/box/box.module.css
+++ b/src/components/shared/box/box.module.css
@@ -6,6 +6,8 @@
     padding: 20px;
     margin-top: 20px;
 
+    background-color: var(--white);
+
     border: 1px solid var(--grey);
     border-radius: 10px;
 
@@ -20,15 +22,16 @@
     justify-content: space-between;
   }
 
-  .home_task_subtitle {
-    margin-right: -150px;
+  .home_task_status {
+    display: flex;
   }
 
-  .home_task_status {
+  .home_task_status_icon {
     height: 20px;
     width: 20px;
 
     border-radius: 50%;
+    margin-left: 5px;
   }
 
   .home_task_footer {
