--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,6 +7,7 @@
 
     .footer {
         display: flex;
+        justify-content: center;
         position: relative;
         height: 80px;
         padding: 10px;
@@ -44,7 +45,7 @@
         justify-content: space-between;
         align-items: center;
 
-        width: 70%;
+        width: 65%;
     }
 
     .option {
