[Add] routing, filters and shared form components

--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -72,6 +72,11 @@
     margin-top: 30px;
   }
 
+  .status_active {
+    color: var(--primary);
+    font-weight: bold;
+  }
+
   .home_filters small {
     padding: 5px 10px;
 
