[Add] form vm, preview header styles

--- a/src/components/preview/preview.module.css
+++ b/src/components/preview/preview.module.css
@@ -2,25 +2,47 @@
   .section {
     display: flex;
     flex-direction: column;
-    padding: 100px 20px;
+    padding: 90px 20px 0px 20px;
+    width: 100%;
+
+    background-color: var(--white);
+
+    font-family: var(--font-family);
+    color: var(--dark-grey);
+  }
+
+  .section_preview {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
     gap: 3vh;
 
     font-family: var(--font-family);
     color: var(--dark-grey);
+  }
 
-    background-color: var(--white);
+  .preview_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+
+    color: var(--dark-grey);
   }
 
   .preview_info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
+      width: 50%;
   }
 
-  .preview_info_header {
-    display: flex;
-    gap: 20px;
+  .preview_title {
+      color: var(--dark-grey);
+  }
+
+  .preview_store {
+    margin-top: 10px;
+    font-size: 1.2rem;
+    color: var(--primary);
   }
 
   .preview_img_container {
@@ -47,13 +69,10 @@
   }
 
   .comment_container {
-    border: 1px solid var(--grey);
-    border-radius: 8px;
+
   }
 
   .comment_text {
-    padding: 10px;
-
     text-align: justify;
     font-size: 0.83rem;
   }
