--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -14,9 +14,7 @@
     padding: 20px;
 
     background: var(--white);
-    box-shadow: var(--grey) 0px 4px 16px, var(--white) 0px 8px 32px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom: 1px solid var(--grey);
   }
 
   .logo {
@@ -27,23 +25,24 @@
 
   .header_content {
     display: flex;
-    flex-direction: column;
-    align-items: end;
+    align-items: center;
+    justify-content: space-between;
+    width: 32%;
+
+    text-align: right;
 
     color: var(--primary);
   }
 
-  .header_title {
+  .header_user {
     font-family: var(--font-family);
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: 600;
-    color: var(--dark-grey);
   }
 
-  .header_user {
+  .header_store {
     font-family: var(--font-family);
     font-size: 0.75rem;
     font-weight: 500;
-    color: var(--dark-grey);
   }
 }
