--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -13,30 +13,30 @@
         padding: 10px;
         
         background: var(--white);
-        box-shadow: var(--grey) 4px 0px 16px, var(--white) 8px 0px 32px;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
+        border-top: 1px solid var(--grey);
     }
 
     .add {
-        position: absolute;
+        /* position: absolute;
         top: -30px;
-        right: 40px;
-        z-index: 1;
+        right: 40px; */
+        /* z-index: 1; */
 
         display: flex;
         justify-content: center;
         align-items: center;
         height: 60px;
         width: 60px;
+        padding: 10px;
 
         font-family: var(--font-family);
         font-weight: 600;
-        font-size: 3rem;
-        color: var(--white);
+        font-size: 1.5rem;
+        color: var(--primary);
+        text-decoration: none;
 
-        box-shadow: var(--grey) 4px 0px 16px, var(--white) 8px 0px 32px;
-        background: linear-gradient(350deg, var(--primary), var(--accent));
+        /* background: linear-gradient(350deg, var(--primary), var(--accent)); */
+        border: 1px solid var(--grey);
         border-radius: 20px;
     }
 
@@ -45,7 +45,7 @@
         justify-content: space-between;
         align-items: center;
 
-        width: 65%;
+        width: 90%;
     }
 
     .option {
